test/compile_error/typemismatch.conf.10.def
config type_mismatch_conf {
	foo : int = 1,4;
}
